finisihing setting html

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ###############################################
 *.sketch
 
-gulpgfile.js
+
 # Avoid accidental XD or Figma upload if you convert the design file
 #######################################################
 ## Please do not remove lines 11 and 12 - thanks! 🙂 ##
@@ -14,3 +14,10 @@ gulpgfile.js
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
+
+
+gulpgfile.js
+package.json
+package-lock.json
+
+nodemodules
